--- a/4thSemester/www/lab1/about.html
+++ b/4thSemester/www/lab1/about.html
@@ -2,9 +2,11 @@
 <html lang="en">
     <head>
         <title>About Me - Michał Waluś</title>
-        <link href="styles.css" rel="stylesheet" />
+        <link href="styles.css" rel="stylesheet">
         <meta charset="utf-8">
-        <meta description="Michał Waluś's simpe web page.">
+        <meta name="description" content="Michał Waluś's simpe web page.">
+        <meta name="author" content="Michał Waluś">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <nav>
@@ -28,9 +30,9 @@
         </nav>
         <main>
             <div class="content">
-                <h1>About Me</h1>
                 <section id="aboutdiv">
-                    <img src="photo.jpg" id="mephoto" />
+                    <h1>About Me</h1>
+                    <img src="photo.jpg" id="mephoto" alt="A photo of myself">
                     <p>Hi, I'm Michał and I am a second year student of Algorithmic Computer Science at Wrocław University of Science and Technology. I'm from Poland and currently live close to the city in which I'm studying.</p>
                     <p>
                         My scientific interests mainly revolve around Math and Computer Science. My probably favorite 
