--- a/4thSemester/www/lab1/numbertheory.html
+++ b/4thSemester/www/lab1/numbertheory.html
@@ -2,31 +2,37 @@
 <html lang="en">
     <head>
         <title>Number Theory - Michał Waluś</title>
-        <link href="styles.css" rel="stylesheet" />
+        <link href="styles.css" rel="stylesheet">
         <meta charset="utf-8">
-        <meta description="Michał Waluś's simpe web page.">
+        <meta name="description" content="Michał Waluś's simpe web page.">
+        <meta name="author" content="Michał Waluś">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <nav>
+            <div class="navdivbig">
+                <a href="about.html" class="navlink">About Me</a>
+            </div>
+            <div class="navdivbig">
+                <a href="projects.html" class="navlink">Projects</a>
+            </div>
             <details>
                 <summary>
                     ☰
                 </summary>
-                <div class="navdiv">
+                <div class="navdivsmall">
                     <a href="about.html" class="navlink">About Me</a>
                 </div>
-                <div class="navdiv">
+                <div class="navdivsmall">
                     <a href="projects.html" class="navlink">Projects</a>
                 </div>
             </details>
         </nav>
         <main>
             <div class="content">
-                <section class="projectdiv">
-                    <h1>Number Theory</h1>
-                    <img src="flt.png" class="projectimg" />
-                </section>
                 <section class="projectdetails">
+                    <h1>Number Theory</h1>
+                    <img src="flt.png" class="projectimg" alt="2 forms of Fermat's little theorem">
                     <p>Ever since high school it's my favorite branch of mathematics, which I also find the most intuitive.</p>
                     <p>I like how most of the problems doesn't require many advanced theorems, but can instead be solved by simple techniques, like factoring or modulo operations.</p>
                     <p>My favorite (and probably most used) theorem is <a href="https://en.m.wikipedia.org/wiki/Fermat's_little_theorem">Fermat's little theorem</a>, which is visible at the top of the page.</p>
