--- a/4thSemester/www/lab1/projects.html
+++ b/4thSemester/www/lab1/projects.html
@@ -2,20 +2,28 @@
 <html lang="en">
     <head>
         <title>Projects - Michał Waluś</title>
-        <link href="styles.css" rel="stylesheet" />
+        <link href="styles.css" rel="stylesheet">
         <meta charset="utf-8">
-        <meta description="Michał Waluś's simpe web page.">
+        <meta name="description" content="Michał Waluś's simpe web page.">
+        <meta name="author" content="Michał Waluś">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <nav>
+            <div class="navdivbig">
+                <a href="about.html" class="navlink">About Me</a>
+            </div>
+            <div class="navdivbig">
+                <a href="projects.html" class="navlink">Projects</a>
+            </div>
             <details>
                 <summary>
                     ☰
                 </summary>
-                <div class="navdiv">
+                <div class="navdivsmall">
                     <a href="about.html" class="navlink">About Me</a>
                 </div>
-                <div class="navdiv">
+                <div class="navdivsmall">
                     <a href="projects.html" class="navlink">Projects</a>
                 </div>
             </details>
@@ -28,21 +36,21 @@
                         <a href="labyrinth.html" class="projectlink">
                             <h2>Labyrinth in Bash</h2>
                         </a>
-                        <img src="labyrinth.png" class="projectimg" />
+                        <img src="labyrinth.png" class="projectimg" alt="Labyrinth in terminal">
                         <p>A simple labyrinth game in terminal.</p>
                     </section>
                     <section class="projectdiv">
                         <a href="chinese-checkers.html" class="projectlink">
                             <h2>Chinese Checkers</h2>
                         </a>
-                        <img src="chinese-checkers.png" class="projectimg" />
+                        <img src="chinese-checkers.png" class="projectimg" alt="Chinese checkers board">
                         <p>Implementation of Chinese Checkers allowing for online play through web browser.</p>
                     </section>
                     <section class="projectdiv">
                         <a href="devstatus.html" class="projectlink">
                             <h2>Device Status</h2>
                         </a>
-                        <img src="devstatus.png" class="projectimg" />
+                        <img src="devstatus.png" class="projectimg" alt="Terminal showing device status">
                         <p>Bash script showing current status of the device and net graphs.</p>
                     </section>
                 </div>
