--- a/4thSemester/www/lab1/about.html
+++ b/4thSemester/www/lab1/about.html
@@ -30,19 +30,22 @@
         </nav>
         <main>
             <div class="content">
-                <section id="aboutdiv">
+                <article id="aboutdiv">
                     <h1>About Me</h1>
                     <img src="photo.jpg" id="mephoto" alt="A photo of myself">
-                    <p>Hi, I'm Michał and I am a second year student of Algorithmic Computer Science at Wrocław University of Science and Technology. I'm from Poland and currently live close to the city in which I'm studying.</p>
-                    <p>
-                        My scientific interests mainly revolve around Math and Computer Science. My probably favorite 
-                        branch of mathematics is <a href="numbertheory.html">Number Theory</a>, although I also enjoy problems involving sums and integrals. 
-                        My more mathematical way of thinking makes me prefer understanding fundamental ideas behind things I use,
-                        as opposed to jumping staight into move 'advanced' concepts, which resulted in me liking <a href="lowlevel.html">low level programming</a>.
-                    </p>
-                    <p>On this site you can also find a short description of a few of my <a href="projects.html">programming projects.</a></p>
-                    <p>My non-scientific intrests include reading, especially fantasy, and recently I've taken a liking to bouldering.</p>
-                </section>
+                    <section>
+                        <h2>Short description of my interests</h2>
+                        <p>Hi, I'm Michał and I am a second year student of Algorithmic Computer Science at Wrocław University of Science and Technology. I'm from Poland and currently live close to the city in which I'm studying.</p>
+                        <p>
+                            My scientific interests mainly revolve around Math and Computer Science. My probably favorite 
+                            branch of mathematics is <a href="numbertheory.html">Number Theory</a>, although I also enjoy problems involving sums and integrals. 
+                            My more mathematical way of thinking makes me prefer understanding fundamental ideas behind things I use,
+                            as opposed to jumping staight into move 'advanced' concepts, which resulted in me liking <a href="lowlevel.html">low level programming</a>.
+                        </p>
+                        <p>On this site you can also find a short description of a few of my <a href="projects.html">programming projects.</a></p>
+                        <p>My non-scientific intrests include reading, especially fantasy, and recently I've taken a liking to bouldering.</p>
+                    </section>
+                </article>
             </div>
             <footer>
                 Contact me: michal.p.walus@gmail.com
