--- a/4thSemester/www/lab1/projects.html
+++ b/4thSemester/www/lab1/projects.html
@@ -29,7 +29,7 @@
             </details>
         </nav>
         <main>
-            <div class="content">
+            <article class="content">
                 <h1>Projects</h1>
                 <div id="projects">
                     <section class="projectdiv">
@@ -54,7 +54,7 @@
                         <p>Bash script showing current status of the device and net graphs.</p>
                     </section>
                 </div>
-            </div>
+            </article>
             <footer>
                 Contact me: michal.p.walus@gmail.com
             </footer>
