--- a/4thSemester/www/lab3/main.html
+++ b/4thSemester/www/lab3/main.html
@@ -24,7 +24,7 @@
             <div id="keyboard"></div>
         </main>
         <div id="end">
-            <h2 id="result">You win!</h2>
+            <h2 id="result"></h2>
             <p id="ans"></p>
             <div id="result-separator"></div>
             <p id="correct" class="score"></p>
