--- a/4thSemester/www/lab3/main.html
+++ b/4thSemester/www/lab3/main.html
@@ -31,6 +31,7 @@
             <p id="misses" class="score"></p>
             <button id="again" onclick="init()">Play Again</button>
         </div>
+        <button id="giveup" onclick="giveUp()">Give up?</button>
     <script src="main.js"></script>
 </body>
 </html>
